// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group - component render should render correctly 1`] = `
<Fragment>
  <Text
    groups={Array []}
    onSubmit={[Function]}
    selected={Object {}}
    value="[object Object]"
  />
</Fragment>
`;

exports[`Group - component render should render correctly placeholder 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={true}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="some placeholder"
    selections=""
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectGroup
      id="group-0"
      key="0"
      label="First value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-second"
      key="second"
      label="Second value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-third"
      key="third"
      label="Third value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </SelectGroup>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={true}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections=""
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectGroup
      id="group-0"
      key="0"
      label="First value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-second"
      key="second"
      label="Second value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-third"
      key="third"
      label="Third value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </SelectGroup>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items and default value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={true}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections=""
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectGroup
      id="group-0"
      key="0"
      label="First value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-second"
      key="second"
      label="Second value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-third"
      key="third"
      label="Third value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </SelectGroup>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items and selected value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy=""
    className=""
    createText="Create"
    direction="down"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={true}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    selections=""
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectGroup
      id="group-0"
      key="0"
      label="First value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-second"
      key="second"
      label="Second value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={true}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </SelectGroup>
    <SelectGroup
      id="group-third"
      key="third"
      label="Third value"
    >
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="0"
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        index={0}
        isChecked={false}
        isDisabled={false}
        isFocused={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </SelectGroup>
  </Select>
</Fragment>
`;
